test_data/data_validation_tests_data/invalid_currency_codes_test_data/bank_export_cross_currency_transactions_old.xlsx
version https://git-lfs.github.com/spec/v1
oid sha256:f5bf5fc4fc852e79db2c804ef582677975b1a4ed33a880f840533bcf5b78ef1a
size 5589
